--- a/i3/i3.symlink/config
+++ b/i3/i3.symlink/config
@@ -174,5 +174,9 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightne
 # Startup launchers
 # Keyboard
 exec setxkbmap gb
-bindsym $mod+l exec setxkbmap -layout us -variant dvp
-bindsym $mod+n exec setxkbmap gb
+
+# Programmer mode (num keys and brackets swapper)
+bindsym $mod+p exec "xmodmap -e 'keysym 0x031 = 0x021 0x031'; xmodmap -e 'keysym 0x032 = 0x022 0x032'; xmodmap -e 'keysym 0x033 = 0x0a3 0x033'; xmodmap -e 'keysym 0x034 = 0x024 0x034'; xmodmap -e 'keysym 0x035 = 0x025 0x035'; xmodmap -e 'keysym 0x036 = 0x05e 0x036'; xmodmap -e 'keysym 0x037 = 0x026 0x037'; xmodmap -e 'keysym 0x038 = 0x02a 0x038'; xmodmap -e 'keysym 0x039 = 0x028 0x039'; xmodmap -e 'keysym 0x030 = 0x029 0x030'; xmodmap -e 'keysym 0x05b = 0x07b 0x05b'; xmodmap -e 'keysym 0x05d = 0x07d 0x05d'"
+
+# Normal mode
+bindsym $mod+n exec "xmodmap -e 'keysym 0x021 = 0x031 0x021'; xmodmap -e 'keysym 0x022 = 0x032 0x022'; xmodmap -e 'keysym 0x0a3 = 0x033 0x0a3'; xmodmap -e 'keysym 0x024 = 0x034 0x024'; xmodmap -e 'keysym 0x025 = 0x035 0x025'; xmodmap -e 'keysym 0x05e = 0x036 0x05e'; xmodmap -e 'keysym 0x026 = 0x037 0x026'; xmodmap -e 'keysym 0x02a = 0x038 0x02a'; xmodmap -e 'keysym 0x028 = 0x039 0x028'; xmodmap -e 'keysym 0x029 = 0x030 0x029'; xmodmap -e 'keysym 0x07b = 0x05b 0x07b'; xmodmap -e 'keysym 0x07d = 0x05d 0x07d'"
