--- a/i3/i3.symlink/config
+++ b/i3/i3.symlink/config
@@ -87,7 +87,7 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+#bindsym $mod+a focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -177,8 +177,12 @@ exec setxkbmap gb
 exec nm-applet
 exec dropbox
 
-# Programmer mode (num keys and brackets swapper)
+# Programmer uk mode (num keys and brackets swapper)
 bindsym $mod+p exec "xmodmap -e 'keysym 0x031 = 0x021 0x031'; xmodmap -e 'keysym 0x032 = 0x022 0x032'; xmodmap -e 'keysym 0x033 = 0x0a3 0x033'; xmodmap -e 'keysym 0x034 = 0x024 0x034'; xmodmap -e 'keysym 0x035 = 0x025 0x035'; xmodmap -e 'keysym 0x036 = 0x05e 0x036'; xmodmap -e 'keysym 0x037 = 0x026 0x037'; xmodmap -e 'keysym 0x038 = 0x02a 0x038'; xmodmap -e 'keysym 0x039 = 0x028 0x039'; xmodmap -e 'keysym 0x030 = 0x029 0x030'; xmodmap -e 'keysym 0x05b = 0x07b 0x05b'; xmodmap -e 'keysym 0x05d = 0x07d 0x05d'"
+
+# Programmer us mode (num keys and brackets swapper)
+bindsym $mod+o exec "xmodmap -e 'keysym 0x031 = 0x021 0x031'; xmodmap -e 'keysym 0x032 = 0x040 0x032'; xmodmap -e 'keysym 0x033 = 0x023 0x033'; xmodmap -e 'keysym 0x034 = 0x024 0x034'; xmodmap -e 'keysym 0x035 = 0x025 0x035'; xmodmap -e 'keysym 0x036 = 0x05e 0x036'; xmodmap -e 'keysym 0x037 = 0x026 0x037'; xmodmap -e 'keysym 0x038 = 0x02a 0x038'; xmodmap -e 'keysym 0x039 = 0x028 0x039'; xmodmap -e 'keysym 0x030 = 0x029 0x030'; xmodmap -e 'keysym 0x05b = 0x07b 0x05b'; xmodmap -e 'keysym 0x05d = 0x07d 0x05d'"
 
 # Normal mode
 bindsym $mod+n exec setxkbmap gb
+bindsym $mod+u exec setxkbmap us
